tests/NormalTests/paczka1/small_fuzzy/31231909.err
Error in line 4: bO8rD90avk A476 62,9
Error in line 5: bO8rD90avk S403 55,6
